# myDevice

./: CMakeLists.txt  partition_fota.csv  readme.md  sdkconfig  sdkconfig.old
components/myDevice/: md5.c  md5.h  myDevice.c  myDevice.h  myDeviceFota.c  myDeviceFota.h  myDeviceHal.c  myDeviceHal.h  myDeviceProtocol.h
components/myDeviceLib/: CMakeLists.txt
main/: CMakeLists.txt  main.c
